@@ -53,6 +53,7 @@
               <name>netty</name>
             </program>
           </programs>
+            <extraJvmArguments>-server -Xms1024m -Xmx1024m -XX:NewSize=512m -XX:MaxNewSize=512m -XX:MaxPermSize=128M -XX:-UseGCOverheadLimit -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+UseCompressedOops -XX:+AggressiveOpts -XX:+UseFastAccessorMethods</extraJvmArguments>
         </configuration>
       </plugin>
     </plugins>
